# python_drf_new

./: .env.example  .gitignore  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
apps/pizza/: filter.py  models.py  serializers.py  urls.py  views.py
apps/pizza/migrations/: 0001_initial.py  0002_pizzamodel_pizza_shop.py  0003_alter_pizzamodel_name_alter_pizzamodel_pizza_shop_and_more.py
apps/pizza_shop/: models.py  serializers.py  urls.py  views.py
apps/pizza_shop/migrations/: 0001_initial.py
apps/user/: serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  models.py  routing.py
backend/apps/pizza/: consumers.py  filter.py  managers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/pizza_shop/: models.py  serializers.py  views.py
backend/apps/user/: managers.py  models.py  permitions.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: __init__.py  celery_conf.py  email_conf.py  jwt_conf.py  rest_conf.py
backend/core/: pagination.py
backend/core/enums/: action_token_enum.py  (+1 more)
backend/templates/: recovery.html  register.html  spam.html  test_email.html
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: jwt_conf.py  rest_conf.py
core/: models.py  pagination.py
core/enums/: regex_enum.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
(+26 files in other folders)
